<resources>
    <string name="app_name">Mosquito</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_button">Registration</string>
    <string name="project">Tasks</string>
    <string name="my_projects">My projects</string>
    <string name="all_projects">All projects</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>

    <string name="no_my_tasks">You don`t have any tasks</string>
    <string name="no_my_projects">You don`t have any projects</string>
    <string name="no_projects">No projects</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
