<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fonColor">


    <EditText
        android:id="@+id/login_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_centerInParent="true"
        android:text="@string/login" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerInParent="true"
        android:text="@string/registration" />

</RelativeLayout>